# barweiss45.github.io

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AI - LLM - Prompt Engineering.html  AI - LLM - Prompt Engineering.md  Dockerfile  Gemfile  Python - AI - LangChain.html  Python - AI - LangChain.md  README.md  _config.yml  about.md  compose.yml  contact.md  index.html  index.md  pyproject.toml  resources.html  resources.md  tag_index.html
_data/: resources.yml
_includes/: head.html  header.html  navigation.html  tags.html
_layouts/: post.html  tag.html
_plugins/: tag_generator.rb
_posts/: 2023-03-07-jid-JSON-Incremental-Digger.md  2023-03-20-XML-Basics.md  2023-03-23-Ansible---Ansible_Pyenv_Compatibility.md  2023-03-23-Ansible-Ansible_Pyenv_Compatibility.md  2023-03-23-Ansible_Pyenv_Compatibility.md  2023-03-23-XML---Basics.md  2023-03-28-Dependency-Inversion-Principle.md  2023-03-28-Pandas-Cheat-Sheet.md  2023-03-28-Python---Pandas-Cheat-Sheet.md  2023-03-28-Python-Pandas-Cheat-Sheet.md  2023-03-28-Software-Devlopment---Dependency-Inversion-Principle.md  2023-03-28-Software-Devlopment-Dependency-Inversion-Principle.md  2023-04-23-Linux---Double-Pipe-in-Bash-scripting.md  2023-04-23-Linux-Double-Pipe-in-Bash-scripting.md  2023-08-26-Docker-Pruning.md  2023-09-11-Software-Development---Understanding-OAuth2.0.md  2023-09-11-Software-Development-Understanding-OAuth2-0.md  2023-09-11-Software-Development-Understanding-OAuth2.0.md  2023-09-21-Pandas-Dataframe-Overview  2023-09-21-Python---Pandas-Dataframe-Overview.md  2023-10-07-Linux---tcpdump-notes.md  (+46 more)
(+13 files in other folders)
