[tool.poetry]
name = "barweiss45-github-io"
version = "0.1.0"
description = "Syntax & Scribbles Website - Jekyll Engine"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^4.0.0"
flake8 = "^7.1.1"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
